--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "reactjs-app",
-  "homepage": "https://github.com/rohitcolaco/reactjs-app",
+  "name": "static-web",
+  "homepage": "https://github.com/rohitcolaco/static-web",
   "authors": [
-    "Rohit Colaco <rohit.colaco@act-on.net>"
+    "Rohit Colaco <rohit.colaco@gmail.com>"
   ],
   "description": "",
   "main": "",
