--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "static-web",
   "homepage": "https://github.com/rohitcolaco/static-web",
   "authors": [
-    "Rohit Colaco <rohit.colaco@gmail.com>"
+    "Rohit Colaco <rohit.colaco@xxxxxxx.com>"
   ],
   "description": "",
   "main": "",
