--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "font-awesome": "~4.7.0",
     "angular-route": "~1.5.8",
     "jquery": "~3.1.1",
-    "ui-bootstrap": "~2.2.0"
+    "ui-bootstrap": "~2.2.0",
+    "lscache": "~1.0.5"
   }
 }
