--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
     "angular-route": "~1.5.8",
     "jquery": "~3.1.1",
     "ui-bootstrap": "~2.2.0",
-    "lscache": "~1.0.5"
+    "lscache": "~1.0.5",
+    "ng-file-upload-shim": "^12.2.13",
+    "ng-file-upload": "^12.2.13"
   }
 }
