--- a/bower.json
+++ b/bower.json
@@ -19,11 +19,14 @@
     "angular": "~1.5.8",
     "bootstrap": "~3.3.7",
     "font-awesome": "~4.7.0",
-    "angular-route": "~1.5.8",
     "jquery": "~3.1.1",
     "ui-bootstrap": "~2.2.0",
     "lscache": "~1.0.5",
     "ng-file-upload-shim": "^12.2.13",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
+    "angular-bootstrap": "^2.4.0",
+    "angular-modal-service": "^0.10.1",
+    "angular-route": "^1.6.1",
+    "angular-animate": "^1.6.1"
   }
 }
